--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <br>
         <a href="Skills.html" target="_blank">My Skills</a>
         <br>
-        <img src="../Assets/Images/Resume Img.jpg" alt="Ashwani Mishra" width="300">
+        <img src="Assets/Images/Resume Img.jpg" alt="Ashwani Mishra" width="300">
         <hr>
         <a href="Contact me.html" target="_blank">Contact me</a>
         
